--- a/style.css
+++ b/style.css
@@ -128,6 +128,50 @@ ul {
   font-family: Oxanium, cursive;
 }
 
+.lado-esquerdo{
+  width: 400px;
+  height: 200px;
+  margin-top: 100px;
+  margin-left: 150px;
+  padding: 10px;
+  border-radius: 15px;
+  font-family: Roboto, sans-serif;
+  color: rgb(234 , 234 , 234);
+  background-color: rgb(66 , 66 , 66);
+}
+
+.lado-esquerdo h1 {
+  text-transform: uppercase;
+  margin-bottom: 5px;
+  color: rgb(46 , 254 , 247);
+}
+
+.lado-esquerdo p {
+  line-height: 18px;
+}
+
+.lado-direito {
+  width: 400px;
+  height: 200px;
+  margin-top: -218px;
+  margin-left: 675px;
+  padding: 10px;
+  border-radius: 15px;
+  font-family: Roboto, sans-serif;
+  color: rgb(234 , 234 , 234);
+  background-color: rgb(66 , 66 , 66);
+} 
+
+.lado-direito h1 {
+  text-transform: uppercase;
+  margin-bottom: 5px;
+  color: rgb(46 , 254 , 247);
+}
+
+.lado-direito p {
+  line-height: 18px;
+}
+
 #rodape {
   height: 100px;
   margin-top: 50px;
