--- a/style.css
+++ b/style.css
@@ -1,41 +1,75 @@
 body {
   background-color: rgb(253 , 251 , 251);
   background-position: center;
-  margin-left: 50px;
+  margin-left: 70px;
+  border: groove;
+  width: 90%;
+  margin-right: 70px;
 }
 
 #cabecalho {
   position: fixed;
   top: 0;
   font-family: Indie Flower , cursive;
-  font-size: 30px;
+  font-size: 25px;
+  background-color: transparent;
+  width: 90%;
+  height: 19%;
 }
 
 #minha_foto {
   border-radius: 10px;
   float: left;
-  position: relative;
+  position: static;
 }
 
 #headNav {
-  float: right;
-  position: absolute;
-  width: 100%;
-  bottom: 120px;
-  margin-left: 100px;
+ position: relative;
+ width: 100%;
+ text-align: center;
 }
 
 #main {
   margin-top: 150px;
   margin-right: 550px;
+  margin-left: 30px;
 }
 
 #sectionLearn {
-  display: inline-block;
+ 
+}
+
+aside {
+  float: right;
+  position: relative;
+  left: 500px;
+  bottom: 200px;
+  margin-left: 10px;
+  width: 300px;
+  height: 270px;
+  border-radius: 10px;
+}
+
+#lorem {
+  border-radius: 10px;
+  float: left;
+  position: static;
 }
 
 footer {
   background-color: black;
   color: white;
   font-family: Courier New , Courier, monospace;
+  float: left;
+  height:auto;
+  font-size: 8px;
+  width: 100%;  
+}
+
+#tableSize {
+  width: 100%;
+  height: 25px;
+  text-align: center;
+  background-color: red;
+
 }
