--- a/style.css
+++ b/style.css
@@ -14,8 +14,19 @@ body{
 #titulo{
     
     text-align: center;
+    font-family: Indie Flower;
+    font-size: 25px;
 }
-#nav{
+#navegar{
+    border: 4px solid red;
+    height: 50px;
+    width: 1250px;
+    background-color: hotpink;
+    margin-top: 90px;
+    padding: 20px;
+
+}
+.nav-links li{
     display: inline;
     
 }
