--- a/style.css
+++ b/style.css
@@ -1,38 +1,46 @@
 body {
-    background-color: rgb(253,251,251);
+
+  background-color: rgb(253 ,251 ,251);
 }
-#cabecalho{
-    position: fixed;
-    top: 0px;
-    background-color: grey;
-    width: 100%;
-    text-align: center;
+#cabecalho {
+
+  position: fixed;
+  top: 0;
+  background-color:grey;
+  width: 100%;
+  text-align: center;
+}
     
-}
-.aprender{
-    background-color: grey; 
-    display: inline-block;
-    text-align: justify;
-    margin-top: 0;
-    width:40%;
-    padding: 16px;
-    line-height: 24px;
-    vertical-align: middle;   
+.aprender {
+
+  background-color:grey; 
+  display: inline-block;
+  text-align: justify;
+  margin-top: 0;
+  width: 40%;
+  padding: 16px;
+  line-height: 24px;
+  vertical-align:middle;   
 }
 
 
-aside{
-    width: 40%;
-    padding-left: .5rem;
-    margin-left: .5rem;
-    float: right;
-    box-shadow: inset 5px 0 5px -5px #29627e;
-    font-style: italic;
+aside {
+
+  width: 40%;
+  padding-left: 0.5rem;
+  margin-left: 0.5rem;
+  float: right;
+  box-shadow: inset 5px 0 5px -5px #29627e;
+  font-style: italic;
 }
-#rodape{
-    background-color: grey; 
-    display: inline-block;
-    text-align: center;
-    width: 100%;
+#rodape {
+
+  background-color:grey; 
+  display: inline-block;
+  text-align: center;
+  width: 100%;
 }
+table, th, td {
+  border: 1px solid grey;
+  border-collapse: collapse;
 
