--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 #cabecalho {
   background-color: rgb(24 , 135 , 131);
-  border-bottom: 5px solid white;
+  border-bottom: 8px solid white;
   padding: 0;
   position: fixed;
   top: 0;
@@ -13,53 +13,49 @@ body {
 }
 
 #titulo {
+  color: white;
   display: block;
   float: left;
-  margin: 25px 0 0 50px;
+  margin: 30px 0 0 50px;
   padding: 0;
+  text-shadow: 3px 3px 5px rgb(14 , 58 , 59);
 }
 
 #navigation {
   float: right;
-  margin: 0;
-  padding: 0;
+  margin-right: 30px;
 }
 
-#menu {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  width: 400px;
-}
-
-#menu li {
-  float: left;
-  width: 150px;
-}
-
-#menu li a {
+.botao {
   background-color: rgb(49 , 99 , 89);
-  color: rgb(14 , 58 , 59);
-  display: block;
-  margin: 25px 50px 0;
-  padding-bottom: 15px;
-  padding-top: 15px;
+  color: white;
+  display: inline-block;
+  font-weight: 600;
+  height: 40px;
+  line-height: 40px;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: 30px;
   text-align: center;
   text-decoration: none;
   width: 150px;
 }
 
-#menu li a:hover:not( .active ) {
+.botao:hover {
   background-color: rgb(152 , 214 , 172);
 }
 
-#menu li a.active {
+.botaoAtivo {
   background-color: white;
-  color: rgb(14 , 58 , 59);
-  display: block;
-  margin: 25px 0 0;
-  padding-bottom: 25px;
-  padding-top: 15px;
+  border-bottom: 22px solid white;
+  color: rgb(24 , 135 , 131);
+  display: inline-block;
+  font-weight: 600;
+  height: 40px;
+  line-height: 40px;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: 30px;
   text-align: center;
   text-decoration: none;
   width: 150px;
