--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   background-color: rgb(253 , 251 , 251);
   position: relative;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: `Franklin Gothic Medium`, `Arial Narrow`, Arial, sans-serif;
   color: grey;
   font-size: 22px;
   line-height: 30px;
@@ -36,7 +36,7 @@ body {
 h1 {
   font-size: xx-large;
   font-weight: 800;
-  font-family: Franklin Gothic Medium; Arial Narrow, Arial, sans-serif;
+  font-family: `Franklin Gothic Medium`; `Arial Narrow`, Arial, sans-serif;
 }
 
 footer {
@@ -66,4 +66,3 @@ table, th, td {
   padding-right: 0%;
   margin-left: 20px;
 }
-        
