--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
-    background-color: rgb(253,251,251);
+    background-color: rgb(253,251,251) ;
 }
-header{
-  padding-top: 0px;
+header {
+  margin-top: 0px ;
 }
 
-#foto {
-border-radius: 50%;
+.foto {
+border-radius: 50% ;
 }
