--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
 }
 
 #main {
-  margin-top: 150px;
+  margin-top: 80px;
   margin-right: 550px;
   margin-left: 30px;
 }
@@ -43,17 +43,20 @@ aside {
   float: right;
   position: relative;
   left: 500px;
-  bottom: 200px;
+  bottom: 145px;
   margin-left: 10px;
   width: 300px;
   height: 270px;
   border-radius: 10px;
+  padding: right;
 }
 
 #lorem {
   border-radius: 10px;
   float: left;
   position: static;
+  border: 0ch;
+  margin: 5px;
 }
 
 footer {
