--- a/style.css
+++ b/style.css
@@ -48,6 +48,8 @@ aside {
   height: 270px;
   border-radius: 10px;
   padding: right;
+  letter-spacing: 10px;
+  text-align: justify;
 }
 
 #lorem {
