--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 h1 {
   font-size: xx-large;
   font-weight: 800;
-  font-family: 'Franklin Gothic Medium'; 'Arial Narrow', Arial, sans-serif;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 footer {
