--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ img {
   border-radius: 40px;
   border: 2px solid rgb(8 , 140 , 123);
   width: 150px;
+  margin-top: 110px;
   margin-right: 60%;
 }
 
