--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ nav a:hover {
   margin-top: 150px;
   height: 200px;
   border-radius: 20px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 #link_github {
   text-decoration: none;
@@ -88,6 +89,7 @@ table {
   align-items: center;
   color: white;
   padding: 20px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   background-color: #32bf84;
   border-radius: 5px;
   clear: both;
@@ -99,6 +101,7 @@ table {
   margin-right: 400px;
   padding: 20px;
   background-color: #32bf84;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
 }
 article {
@@ -109,12 +112,15 @@ article {
   width: 300px;
   text-align: center;
   margin-left: 400px;
+  margin-bottom: 12px;
   background-color: #32bf84;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
   clear: both;
 }
 aside {
   background-color: #32bf84;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
   color: white;
   padding: 20px;
@@ -124,4 +130,12 @@ aside {
   text-align: center;
   margin-right: 400px;
   margin-top: 2px;
+  margin-bottom: 15px;
+}
+#rodape {
+  clear: both;
+  background-color: #32bf84;
+  padding: 9px;
+  text-align: center;
+  color: white;
 }
