Alterado a fonte do body, texto do artigo

--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 body{
     background-color: rgb(253, 251, 251);
+    font-family: Indie Flower;
+    width: 1366px;
+    height: 768px;
 }
 #cabecalho {
     
