--- a/style.css
+++ b/style.css
@@ -16,13 +16,14 @@ nav {
 
 #cabecalho {
     background-color: green;
-    top: 0;
     position: fixed;
     width: 100%;
     text-align: center;
+    margin-bottom: 100px;
     }
 
 img {
+    display: block;
     border-radius: 50%;
     width: 250px;
 }
