Alterado a cor da letra

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     background-color: rgb(253, 251, 251);
     font-family: Indie Flower;
+    color: rgb(191, 152, 219);
     width: 1366px;
     height: 768px;
 }
