--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
    }
 #cabecalho{
    margin: auto;
-   padding-right: 3em;
+   padding-right: 1350px;
    border: green;
    position: fixed; top: 0px;
    background-color: green
