--- a/style.css
+++ b/style.css
@@ -78,10 +78,17 @@ nav a:hover {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 2px;
   margin-right: 500px;
+  margin-bottom: 9px;
   padding: 5px;
   letter-spacing: 2px;
   display: block;
   float: right;
+}
+#sobre-mim {
+  background-color: #32bf84;
+  color: white;
+  clear: both;
+  text-align: center;
 }
 table {
   padding: 10px;
