--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ body {
    background-color: green
    
 }
-#rodape{
-   position: fixed;bottom: 10px;
+
+
+.conteiner{
+   display:flex
+   flex-direction: row;
 }
+
