--- a/style.css
+++ b/style.css
@@ -82,7 +82,12 @@ nav a:hover {
   display: block;
   float: right;
 }
-
+#sobre-mim {
+  background-color: #32bf84;
+  color: white;
+  clear: both;
+  text-align: center;
+}
 table {
   padding: 10px;
 }
@@ -103,7 +108,7 @@ table {
   color: white;
   display: block;
   float: right;
-  margin-right: 501px;
+  margin-right: 500px;
   padding: 20px;
   background-color: #32bf84;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -133,7 +138,7 @@ aside {
   display: block;
   width: 300px;
   text-align: center;
-  margin-right: 501px;
+  margin-right: 500px;
   margin-bottom: 12px;
 }
 #rodape {
