--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
-body{
-    background-color:rgb(253,251,251);
+body {
+    background-color :rgb(253, 251, 251);
 }
-#cabecalho{
+#cabecalho {
   margin-top: 0px;
-  background-color:rgb(200,186,98);
+  background-color :rgb(200, 186, 98);
 }
-#minha_foto{
+#minha_foto {
 border-radius: 50%;
+
 }
