--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@ nav a:hover {
 }
 #sobre-mim {
   background-color: #32bf84;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   color: white;
   clear: both;
   text-align: center;
