--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 
 #cabecalho {
 
-    background-color: #7F9172;
+    background-color: #567568;
     padding: 10px;
 }
 
@@ -17,6 +17,16 @@ h1 {
     text-align: center;
     font-family: sans-serif;
 
+}
+
+#licoes_aprendidas {
+
+    padding: 15px;
+    margin: 50px;
+    border-radius: 2px solid #7C606B;
+    width: 20%;
+    height: 250px;
+    background-color: #AFBAA8;
 }
 
 .menu-superior {
@@ -38,6 +48,10 @@ h1 {
     border-radius: 50%;
     width: 17em;
 
+}
 
+#titulo-aprendidas {
+
+    text-align: center;
 
 }
