--- a/style.css
+++ b/style.css
@@ -3,12 +3,21 @@
 * {
   margin: 0;
   padding: 0;
-  border: 0;
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 body {
   background: rgb(253 , 251 , 251);
   font-family: ' Nunito ' , sans-serif;
+}
+
+main {
+  max-width: 95%;
+  margin: auto;
 }
 
 #cabecalho {
@@ -41,6 +50,7 @@ body {
 
 main {
   margin-top: 90px;
+  
 }
 
 .perfil {
@@ -79,6 +89,7 @@ h4 {
 .lados {
   background-color: rgb(64 , 144 , 112);
   padding: 30px;
+  border-radius: 10px;
 }
 
 #lado {
@@ -90,18 +101,19 @@ h4 {
 }
 
 .lado-direito {
-  width: 15%;
-  margin-left: 70%;
-  margin-top: 15px;
-  padding: 10px;
+  width: 250px;
+  margin: 25px 120px;
+  padding: 15px;
   border: 3px solid rgb(40 , 42 , 54);
   border-radius: 10px;
+  float: right;
 }
 
 .lado-direito h3 {
   font-size: 16px;
   font-weight: 700;
   margin-bottom: 10px;
+  text-decoration: underline;
 }
 
 .lado-direito p {
@@ -133,7 +145,7 @@ h4 {
 
 .licoes_a_apre {
   padding-left: 150px;
-  width: 35%;
+  width: 45%;
   line-height: 1.35;
   display: inline-block;
 }
@@ -176,16 +188,22 @@ th {
   text-decoration: underline;
   font-size: 18px;
   font-weight: 700;
+  background-color: rgb(230 , 227 , 227);
 }
 
 #rodape {
   text-align: center;
-  padding: 20px 0;
+  padding: 30px 0;
   background-color: rgb(76 , 164 , 107);
 }
 
 #rodape a img {
-  color: rgb(230 , 227 , 227);
+  margin: 10px;
+  transition: transform 200ms ease-in-out
+}
+
+#rodape a img:hover {
+  transform: scale(1.1);
 }
 
 #rodape h6 {
