--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ background-color : rgb(253 , 251 , 251);
 }
 
 #cabecalho {
-margin: 0px;
+margin-top: 0px;
 background-color : rgb(201 , 123 , 50);
 height: 100px;
 line-height: 100px;
