--- a/style.css
+++ b/style.css
@@ -2,6 +2,15 @@
     background-color: rgb(253, 251, 251);
 }
 
-# cabecalho {
+#cabecalho {
     margin: 0px;
+    position: fixed;
+}
+
+#titulo {
+    text-align: center;
+}
+
+#minha_foto{
+    width: 20%;
 }
