--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: rgb(253 , 251 , 251); /* voltar para rgb(253 , 251 , 251) */
+  background-color: rgb(253 , 251 , 251);
   margin: 0;
   overflow-x: hidden;
   padding: 0;
@@ -68,8 +68,8 @@ body {
   border-top: 4px solid white;
   bottom: 0;
   height: 60px;
-  padding: 0; 
-  position: relative; /* Atenção! Não esquecer de remover! */
+  padding: 0;
+  position: relative;
   width: 100vw;
 }
 
@@ -106,7 +106,7 @@ body {
   display: block;
   height: 40px;
   line-height: 40px;
-  margin: 0;
+  margin: 0 0 50px 0;
   padding-left: 40px;
 }
 
@@ -116,7 +116,6 @@ body {
   margin-bottom: 20px;
   margin-left: 50px;
   margin-right: 50px;
-  margin-top: 50px;
   width: 250px;
 }
 
